style(WeatherApp-360): decreased w of the tech stack's container, decreased its font. Lowered imgs (with mt), Set full description's tracking to normal, increased w of its container, aligned its text to the left. Decreased mt for the GitHubLink. Corrected dividers' heights

--- a/src/index.css
+++ b/src/index.css
@@ -149,11 +149,11 @@
 
     --block-div-xs-h: 332px;
     --block-div-md-h: 282px;
-    --block-div-lg-h: 338px;
+    --block-div-lg-h: 330px;
     --block-div-xl-h: 332px;
 
     --weather-screen-div-top: 466px;
-    --weather-screen-div-height: 1120px;
+    --weather-screen-div-height: 1078px;
 
     --shelter-screen-div-top: 408px;
     --shelter-screen-div-height: 1128px;
